--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<!-- Font Aswome CDN-->
-    <script src="https://kit.fontawesome.com/1b4227d0ce.js"></script>
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/1b4227d0ce.js"></script>
+	
 
 	<!--Slick slider-->
 	
@@ -41,7 +42,7 @@
       <div class="carousel-caption">
         <h5>Wellcome to Rent<span>OM</span> Services</h5>
         <p>U May Get a Good Solution For Rented Room</p>
-        <button type="button" class="more-bttn" data-toggle="modal" data-target="#exampleModal">Visit Now</button>
+        <a href="#PlaceOrder" id="vidBtn">visit Now</a>
       </div>
     </div>
     <div class="carousel-item">
@@ -49,7 +50,7 @@
       <div class="carousel-caption">
         <h5>TasteMOM Family of Rent<span>OM</span> </h5>
         <p>Be a Part Of Rentom Family & Enjoy Tasty and Healty Food like Mom </p>
-        <button type="button" class="more-bttn" data-toggle="modal" data-target="#exampleModal">Visit Now</button>
+        <a href="#PlaceOrder" id="vidBtn">visit Now</a>
       </div>
     </div>
     <div class="carousel-item">
@@ -57,7 +58,7 @@
       <div class="carousel-caption">
         <h5>TasteMOM A Family of Rent<span>OM</span></h5>
         <p>Be a Part Of Rentom Family & Enjoy Tasty and Healty Food like Mom</p>
-        <button type="button" class="more-bttn" data-toggle="modal" data-target="#exampleModal">Visit Now</button>
+        <a href="#PlaceOrder" id="vidBtn">visit Now</a>
       </div>
     </div>
   </div>
@@ -117,7 +118,7 @@
 					<div class="l-info">
 						<h5>Rentom</h5>
 						<p>Sudip shil</p>
-						<button type="button" class="more-bttn" data-toggle="modal" data-target="#exampleModal">Visit Now</button>
+						<a href="#PlaceOrder" id="vidBtn">visit Now</a>
 					</div>
 			</div>
 			
@@ -126,7 +127,7 @@
 					<div class="l-info">
 						<h5>Rentom</h5>
 						<p>Sudip shil</p>
-						<button type="button" class="more-bttn" data-toggle="modal" data-target="#exampleModal">Visit Now</button>
+						<a href="#PlaceOrder" id="vidBtn">visit Now</a>
 					</div>
 			</div>
 			<div class="l-img">
@@ -134,7 +135,7 @@
 					<div class="l-info">
 						<h5>Rentom</h5>
 						<p>Sudip shil</p>
-						<button type="button" class="more-bttn" data-toggle="modal" data-target="#exampleModal">Visit Now</button>
+						<a href="#PlaceOrder" id="vidBtn">visit Now</a>
 					</div>
 			</div>
 			<div class="l-img">
@@ -142,7 +143,7 @@
 					<div class="l-info">
 						<h5>Rentom</h5>
 						<p>Sudip shil</p>
-						<button type="button" class="more-bttn" data-toggle="modal" data-target="#exampleModal">Visit Now</button>
+						<a href="#PlaceOrder" id="vidBtn">visit Now</a>
 					</div>
 			</div>
 			<div class="l-img">
@@ -150,7 +151,7 @@
 					<div class="l-info">
 						<h5>Rentom</h5>
 						<p>Sudip shil</p>
-						<button type="button" class="more-bttn" data-toggle="modal" data-target="#exampleModal">Visit Now</button>
+						<a href="#PlaceOrder" id="vidBtn">visit Now</a>
 					</div>
 			</div>
 			
@@ -158,9 +159,59 @@
 	</div>
 </div>
 
+<!-----------------------------------------------------------------------
 
+------------------------------------------------------------------------------>
 
-
+<div class="lecture2">
+	<div class="container-fluid">
+		<h1><h1>Rent<span style="color: red !important;">OM</span> Room Service</h1></h1>
+		<div class="box">
+			<div class="l-img">
+					<img src="images/logo.png">
+					<div class="l-info">
+						<h5>Rentom</h5>
+						<p>Sudip shil</p>
+						<a href="#PlaceOrder" id="vidBtn">visit Now</a>
+					</div>
+			</div>
+			
+			<div class="l-img">
+					<img src="images/logo.png">
+					<div class="l-info">
+						<h5>Rentom</h5>
+						<p>Sudip shil</p>
+						<a href="#PlaceOrder" id="vidBtn">visit Now</a>
+					</div>
+			</div>
+			<div class="l-img">
+					<img src="images/logo.png">
+					<div class="l-info">
+						<h5>Rentom</h5>
+						<p>Sudip shil</p>
+						<a href="#PlaceOrder" id="vidBtn">visit Now</a>
+					</div>
+			</div>
+			<div class="l-img">
+					<img src="images/logo.png">
+					<div class="l-info">
+						<h5>Rentom</h5>
+						<p>Sudip shil</p>
+						<a href="#PlaceOrder" id="vidBtn">visit Now</a>
+					</div>
+			</div>
+			<div class="l-img">
+					<img src="images/logo.png">
+					<div class="l-info">
+						<h5>Rentom</h5>
+						<p>Sudip shil</p>
+						<a href="#PlaceOrder" id="vidBtn">visit Now</a>
+					</div>
+			</div>
+			
+		</div> 
+	</div>
+</div>
 
 
 
@@ -245,6 +296,8 @@
   interval: 4000
 })
 </script>
+
+
 
 
 </body>
